# report-generator

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  create_form.py  gemini_ai.py  inspection.json  pyproject.toml  requirements.txt
latex/: final_report.aux  final_report.tex  report.tex
static/css/: style.css
templates/: index.html
